# prog-spotify

./: .gitignore  Makefile  README.md  catch_up_with_progarchives.py  config.py  docker-compose.yaml  fetch.py  pyproject.toml  refresh.py  vw_album_features.js
spotify/: __init__.py  albums.py  artists.py  audio_features.py  clients.py  tracks.py
spotify/models/: __init__.py  progarchives.py  spotify.py
spotify/repositories/: decorators.py  local.py  mongo.py
tests/albums/: fixtures.py  test_match_prog_spot_album.py
tests/artists/: conftest.py  test_rate_candidate.py
tests/fixtures/: __init__.py  album.json  artist.json  audio_features.json  track.json
tests/fixtures/progarchives_artists/: 1.json  50.json
tests/fixtures/spotify_albums/: 1YWaABizGll91McSy7RLzg.json  3CkvROUTQ6nRi9yQOcsB50.json  3Q1GqsBVdXT5UAJ1DANFsS.json  3Uz6jx81OY2J5K8Z4wmy2P.json  6vHBuUxrcpn1do5UaEJ7g6.json
tests/fixtures/spotify_artists/: 1YWaABizGll91McSy7RLzg.json  1i0FwIJ3oUPrLSVrDXZfrt.json  3CkvROUTQ6nRi9yQOcsB50.json  3Q1GqsBVdXT5UAJ1DANFsS.json  3Uz6jx81OY2J5K8Z4wmy2P.json  6vHBuUxrcpn1do5UaEJ7g6.json
tests/models/: conftest.py  test_spotify.py
